<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fundus</string>
    <string name="action_add_item">Add new Item</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_login">login</string>

    <!-- ItemSelectActivity -->
    <string name="camera_button">Scan Barcode</string>
    <string name="searchview_query_hint"></string>
    <string name="not_recognized_info">Barcode not in Database</string>
    <string name="query_info">Connecting to Database…</string>

    <!-- ItemAddActivity -->
    <string name="activity_add_title">Add Item</string>
    <string name="empty_fields_warning">Please fill out all fields.</string>
    <string name="add_button">Add Item</string>

    <!-- ItemInfoActivity -->
    <string name="item_id">Database-ID</string>
    <string name="item_name">Name</string>
    <string name="item_name_hint">Blättermagen</string>
    <string name="item_shortname">Short Name</string>
    <string name="item_shortname_hint">Blättermagen</string>
    <string name="item_category">Category</string>
    <string name="item_category_prompt">Category</string>
    <string name="item_barcode">Barcode</string>
    <string name="item_barcode_hint">1234567</string>
    <string name="item_quantitycontent">Content</string>
    <string name="item_quantitycontent_hint">500</string>
    <string name="item_unit_prompt">Unit</string>
    <string name="item_size">Size</string>
    <string name="item_size_prompt">Size</string>
    <string name="item_description">Description</string>
    <string name="item_description_hint">Description</string>
    <string name="item_sellingprice">Selling Price</string>
    <string name="item_sellingprice_hint">6.90</string>
    <string name="item_buyingprice">Buying Price</string>
    <string name="item_buyingprice_hint">5.00</string>
    <string name="item_tax">Tax Group</string>
    <string name="item_tax_hint">A</string>
    <string name="item_supplier">Supplier</string>
    <string name="item_supplier_hint">Pegasus</string>
    <string name="item_quantity">Quantity</string>
    <string name="edit_quantity">New Quantity</string>
    <string name="edit_quantity_button_content">Edit Quantity</string>

    <!-- LoginActivity -->
    <string name="activity_login_title">Login</string>
    <string name="login_image_content">Fundus</string>
    <string name="edittext_user_hint">User</string>
    <string name="edittext_password_hint">Password</string>
    <string name="button_login">Login</string>
    <string name="button_guest">Guest</string>
    <string name="error_not_authorized">Not Authorized</string>
    <string name="error_user_required">User required</string>

</resources>