<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="de.hundebarf.bestandspruefer.ItemAddActivity"
    tools:ignore="MergeRootFrame"
    android:background="@color/activity_background" >

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical" >

            <!--
    ID (11), barcode, name, kurzname, warengruppe, menge(inhalt),
    einheit(inhalt),groeße,beschreibung,verkaufspreis,
    menge(verpackung),einheit(verpackung),steuergruppe,
    einkaufspreis,lieferant,artikelnummer,[idealbestand,warnbestand]
            -->
            
          	<!-- name -->
            <TextView
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name" />
            <EditText
                android:id="@+id/b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/add_edit_text_margin_bottom"
                android:layout_marginTop="@dimen/add_edit_text_margin_top"
                android:maxLength="50"
                android:hint="@string/item_name_hint"
                android:maxLines="1"
				android:inputType="text"/>
            
            <include layout="@layout/add_item_layout" />      

            <!-- kurzname (optional)-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_shortname" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/add_edit_text_margin_bottom"
                android:layout_marginTop="@dimen/add_edit_text_margin_top"
                android:maxLength="12"
                android:hint="@string/item_shortname_hint"
                android:maxLines="1"
				android:inputType="text"/>

            <!-- warengruppe -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_category" />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/add_edit_text_margin_bottom"
                android:layout_marginTop="@dimen/add_edit_text_margin_top"
                android:hint="@string/item_category_prompt"
                android:entries="@array/selectable_categories" />

            <!-- barcode (optional)-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_barcode" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/add_edit_text_margin_bottom"
                    android:layout_marginTop="@dimen/add_edit_text_margin_top"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:maxLength="11"
                    android:hint="@string/item_barcode_hint"
                    android:inputType="number"
                    android:maxLines="1" />
                <Button
                    android:id="@+id/barcode_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/add_edit_text_margin_bottom"
                    android:layout_marginTop="@dimen/add_edit_text_margin_top"
                    android:background="@drawable/camera_button" />
            </LinearLayout>

            <!-- menge(inhalt) einheit(inhalt) -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_quantitycontent" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/add_edit_text_margin_bottom"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="@dimen/add_edit_text_margin_top"
                    android:layout_weight="2"
                    android:maxLength="11"
                    android:hint="@string/item_quantitycontent_hint"
                    android:inputType="number"
                    android:maxLines="1" />
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/add_edit_text_margin_bottom"
                    android:layout_marginTop="@dimen/add_edit_text_margin_top"
                    android:entries="@array/selectable_units"
                    android:prompt="@string/item_unit_prompt" />
            </LinearLayout>
            
            <!-- groesse (optional)-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_size" />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/add_edit_text_margin_bottom"
                android:layout_marginTop="@dimen/add_edit_text_margin_top"
                android:entries="@array/selectable_sizes"
                android:prompt="@string/item_size_prompt" />
            
			<!-- beschreibung (optional)-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_description" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/add_edit_text_margin_bottom"
                android:layout_marginTop="@dimen/add_edit_text_margin_top"
                android:hint="@string/item_description_hint"
                android:maxLines="1"
                android:maxLength="50"
				android:inputType="text"/>
            
			<!-- verkaufspreis -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_sellingprice" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/add_edit_text_margin_bottom"
                android:layout_marginTop="@dimen/add_edit_text_margin_top"
                android:maxLength="11"
                android:hint="@string/item_sellingprice_hint"
                android:maxLines="1"
				android:inputType="numberDecimal"
				android:digits="0123456789,."/>
            
			<!-- einkaufspreis (optional) -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_buyingprice" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/add_edit_text_margin_bottom"
                android:layout_marginTop="@dimen/add_edit_text_margin_top"
                android:maxLength="11"
                android:hint="@string/item_buyingprice_hint"
                android:maxLines="1"
				android:inputType="numberDecimal"
				android:digits="0123456789,."/>
            
			<!-- steuergruppe -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_tax" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/add_edit_text_margin_bottom"
                android:layout_marginTop="@dimen/add_edit_text_margin_top"
                android:maxLength="1"
                android:hint="@string/item_tax_hint"
                android:maxLines="1"
				android:inputType="textCapCharacters"/>
            
			<!-- lieferant (optional) -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_supplier" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/add_edit_text_margin_bottom"
                android:layout_marginTop="@dimen/add_edit_text_margin_top"
                android:maxLength="50"
                android:hint="@string/item_supplier_hint"
                android:maxLines="1"
				android:inputType="text"/>
            
            <!-- Footer -->
            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/footer_height" />
            
        </LinearLayout>
    </ScrollView>
    
    <!-- Add Bar -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/footer_height"
        android:layout_gravity="bottom"
        android:background="@drawable/bottom_bar" >
        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="@dimen/round_button_diameter"
            android:layout_height="@dimen/round_button_diameter"
            android:layout_gravity="center"
            android:layout_margin="@dimen/round_button_margin"
            android:background="@drawable/round_button"
            android:src="@drawable/ic_add"
            android:contentDescription="@string/add_button"/>
    </FrameLayout>

</FrameLayout>