<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_login_vertical_padding" 
    android:paddingLeft="@dimen/activity_login_horizontal_padding"
    android:paddingRight="@dimen/activity_login_horizontal_padding"
    android:paddingBottom="@dimen/activity_login_vertical_padding"
    tools:context="de.hundebarf.bestandspruefer.LoginActivity"
    tools:ignore="MergeRootFrame" >

    <!-- Image -->
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/login_image_margin"
        android:layout_marginRight="@dimen/login_image_margin"
        android:layout_weight="1"
        android:contentDescription="@string/login_image_content"
        android:src="@drawable/ic_launcher" />

    <!-- User/Password fields -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edittext_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/edittext_user_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/edittext_password_hint"
            android:inputType="numberPassword"
            android:imeOptions="actionGo" />
    </LinearLayout>
    
    <!-- Divider -->
    <View
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:layout_marginTop="16dip"
	    android:background="?android:attr/dividerHorizontal"/>
    
    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        style="?android:attr/buttonBarStyle" >

        <Button
            android:id="@+id/button_login"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            style="?android:borderlessButtonStyle" />

        <Button
            android:id="@+id/button_guest"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_guest" 
            style="?android:borderlessButtonStyle" />
    </LinearLayout>

</LinearLayout>